--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>dock_spring_clever1</artifactId>
+	<artifactId>jar_spring_deploy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dock_spring_clever1</name>
-	<description>Demo for Spring Boot gcloud</description>
+	<name>jar_spring_deploy</name>
+	<description>Demo for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
